--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,173 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
+body{
+  width: 100vw;
   overflow-x: hidden;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+header{
+  height: 25vh;
+  background-color: #0BD550;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+h1{
+  color: white;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.search{
+  width: 20vw;
+  padding: .8rem 1rem;
+  border-radius: 1vw;
+  font-size: 1.2rem;
+  border: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.container{
+  width: 100%;
+  padding: 1rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
 }
+
+.card{
+  width: 18rem;
+  height: 18rem;
+  background-color: #FFF4F5;
+  border-radius: 2rem;
+  border: 1px solid black;
+  padding: 1rem;
+  text-align: center;
+}
+
+.card img{
+  height: 8rem;
+  width: 8rem;
+  border-radius: 50%;
+  border: 1px solid black;
+  margin-bottom: 2rem;
+  box-shadow: 4px 10px 15px rgba(0, 0, 0, 0.322);
+}
+
+.card p{
+  color: gray;
+}
+
+.card button{
+  margin-top: 1rem;
+  padding: .3rem 1.3rem;
+  border-radius: 1rem;
+  border: none;
+  background-color: #0BD550;
+  color: white;
+  font-size: 1rem;
+  transition: all .3s;
+}
+
+.card button:hover{
+  padding: .3rem 1.7rem;
+  cursor: pointer;
+  color: black;
+}
+
+hr{
+  width: 90%;
+  margin: 2rem 5%;
+  border: 1px solid #0BD550;
+}
+
+.cart{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 16rem;
+  margin-bottom: 2rem;
+  border: 1px solid black;
+  border-radius: 1.5rem;
+  background-color: bisque;
+  text-align: center;
+}
+
+.cart h1{
+  color: #000;
+  margin-bottom: 1rem;
+}
+
+.item1{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.item1 img{
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
+.item1 p{
+  color: gray;
+}
+
+.item2{
+  margin: 1rem 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.item2 .removeBtn{
+  padding: .3rem .7rem;
+  border: none;
+  background-color: #0BD550;
+  color: white;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+
+.item2 .update{
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #0BD550;
+  font-weight: 900;
+  color: white;
+  line-height: 1.5rem;
+  cursor: pointer;
+}
+
+.totalSection{
+  margin: 1rem;
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+
+.paymentBtn{
+  padding: .3rem .7rem;
+  background-color: #0BD550;
+  border:none;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+.paymentBtn:hover{
+  padding: .3rem 1rem;
+}
+
+
